--- a/doa.html
+++ b/doa.html
@@ -1,1 +1,45 @@
-<!DOCTYPE html><html lang='id'><head><meta charset='UTF-8'><title>Doa Harian | Rumah Dakwah Husen NR</title><meta name='description' content='Kumpulan doa harian yang menenangkan hati dan memperkuat iman.'><meta name='keywords' content='doa Islam, doa harian, dzikir, doa pendek'><meta property='og:image' content='https://husennr.github.io/Komdashik/assets/og-image.png'><link rel='stylesheet' href='assets/style.css'></head><body><h1>Doa Harian</h1><p>Amalkan doa-doa pilihan untuk ketenangan jiwa.</p><a href='https://wa.me/6285179828031' class='whatsapp-float'>Chat Dakwah</a></body></html>
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Doa Harian — Rumah Dakwah Husen NR</title>
+  <link rel="icon" href="favicon.ico">
+  <meta name="description" content="Kumpulan doa harian dan amalan singkat untuk keluarga, perjalanan, dan kegiatan sehari-hari. Disusun ringkas agar mudah diamalkan.">
+  <meta name="keywords" content="doa harian, amalan, zikir">
+  <meta property="og:title" content="Doa Harian — Rumah Dakwah Husen NR">
+  <meta property="og:description" content="Doa dan zikir ringkas untuk menemani aktivitas sehari-hari.">
+  <meta property="og:image" content="og-image.png">
+  <meta property="og:url" content="./doa.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <style>/* css sama */:root{--bg:#f7fdfc;--card:#fff;--accent:#0f766e;--muted:#6b7280}*{box-sizing:border-box}body{margin:0;font-family:Inter,ui-sans-serif,system-ui,Arial,Helvetica,sans-serif;background:var(--bg);color:#0f172a}.container{min-height:100vh;display:flex;flex-direction:column;align-items:center;padding:40px 16px}.nav{width:100%;max-width:900px;display:flex;justify-content:space-between;align-items:center;margin-bottom:24px}.brand{font-weight:700;color:var(--accent);font-size:20px}.navlinks a{margin-left:14px;text-decoration:none;color:var(--muted);font-weight:600}.card{width:100%;max-width:900px;background:var(--card);padding:44px;border-radius:12px;box-shadow:0 6px 24px rgba(10,10,10,0.06);text-align:left}.h1{font-size:28px;margin:0 0 8px}.lead{color:var(--muted);margin:0 0 18px}.footer{margin-top:18px;color:var(--muted);font-size:14px;text-align:center}.whatsapp{position:fixed;right:18px;bottom:18px;background:var(--accent);color:white;border-radius:999px;padding:12px 16px;text-decoration:none;font-weight:700;box-shadow:0 6px 18px rgba(15,118,110,0.25)}.simple-list{text-align:left;margin-top:12px}@media(max-width:520px){.card{padding:28px} .h1{font-size:22px}}</style>
+</head>
+<body>
+  <div class="container">
+    <div class="nav">
+      <div class="brand">Rumah Dakwah Husen NR</div>
+      <div class="navlinks">
+        <a href="index.html">Beranda</a>
+        <a href="kajian.html">Kajian</a>
+        <a href="artikel.html">Artikel</a>
+        <a href="program.html">Program</a>
+        <a href="profil.html">Profil</a>
+        <a href="kontak.html">Kontak</a>
+      </div>
+    </div>
+
+    <main class="card">
+      <h1 class="h1">Doa Harian</h1>
+      <p class="lead">Doa dan zikir ringkas untuk menemani aktivitas sehari-hari.</p>
+      <ol class="simple-list">
+        <li>Doa sebelum beraktivitas</li>
+        <li>Doa memohon keselamatan</li>
+        <li>Doa untuk keluarga</li>
+      </ol>
+      <div class="footer">© Rumah Dakwah Husen NR — Semua hak dilindungi</div>
+    </main>
+  </div>
+
+  <a class="whatsapp" href="https://wa.me/6285179828031" target="_blank" rel="noopener">Chat WA</a>
+</body>
+</html>
