--- a/index.html
+++ b/index.html
@@ -1,68 +1,107 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Beranda — Rumah Dakwah Husen NR</title>
-  <link rel="icon" href="favicon.ico">
-  <meta name="description" content="Rumah Dakwah Husen NR — tempat berkumpul untuk mendalami Islam lewat kajian, artikel, dan program pembinaan keluarga. Temukan jadwal kajian, pengumuman, dan inspirasi harian.">
-  <meta name="keywords" content="dakwah, rumah dakwah, kajian islam, inspirasi harian">
-  <meta property="og:title" content="Beranda — Rumah Dakwah Husen NR">
-  <meta property="og:description" content="Tempat berkumpul untuk mendalami Islam lewat kajian, artikel, dan program pembinaan keluarga.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rumah Dakwah Husen NR</title>
+  <meta name="description" content="Rumah Dakwah Husen NR – pusat kajian Islam, inspirasi harian, doa, dan tafsir untuk memperdalam ilmu agama.">
+  <meta name="keywords" content="dakwah, kajian Islam, ustadz, inspirasi, doa, tafsir, rumah dakwah husen nr">
+  <meta property="og:title" content="Rumah Dakwah Husen NR">
+  <meta property="og:description" content="Bersama kajian & inspirasi Islam harian.">
   <meta property="og:image" content="og-image.png">
-  <meta property="og:url" content="./index.html">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:url" content="https://husennr.github.io/Komdashik/">
+  <meta property="og:type" content="website">
+  <link rel="icon" href="favicon.ico">
   <style>
-    :root{--bg:#f7fdfc;--card:#fff;--accent:#0f766e;--muted:#6b7280}
-    *{box-sizing:border-box}body{margin:0;font-family:Inter,ui-sans-serif,system-ui,Arial,Helvetica,sans-serif;background:var(--bg);color:#0f172a}
-    .container{min-height:100vh;display:flex;flex-direction:column;align-items:center;padding:40px 16px}
-    .nav{width:100%;max-width:900px;display:flex;justify-content:space-between;align-items:center;margin-bottom:24px}
-    .brand{font-weight:700;color:var(--accent);font-size:20px}
-    .navlinks a{margin-left:14px;text-decoration:none;color:var(--muted);font-weight:600}
-    .card{width:100%;max-width:900px;background:var(--card);padding:44px;border-radius:12px;box-shadow:0 6px 24px rgba(10,10,10,0.06);text-align:center}
-    .h1{font-size:28px;margin:0 0 8px}
-    .lead{color:var(--muted);margin:0 0 18px}
-    .footer{margin-top:18px;color:var(--muted);font-size:14px;text-align:center}
-    .whatsapp{position:fixed;right:18px;bottom:18px;background:var(--accent);color:white;border-radius:999px;padding:12px 16px;text-decoration:none;font-weight:700;box-shadow:0 6px 18px rgba(15,118,110,0.25)}
-    .center-text{display:flex;flex-direction:column;align-items:center;justify-content:center;height:60vh}
-    .simple-list{text-align:left;margin-top:12px}
-    @media(max-width:520px){.card{padding:28px} .h1{font-size:22px}}
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(180deg, #198754, #0f5132);
+      color: white;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      padding: 60px 20px 30px;
+    }
+    header h1 {
+      font-size: 2.5em;
+      margin: 0;
+    }
+    header p {
+      font-size: 1.2em;
+      opacity: 0.9;
+    }
+    nav {
+      margin: 30px 0;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
+      font-weight: 600;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 0.9em;
+      background: rgba(255, 255, 255, 0.1);
+    }
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25D366;
+      color: white;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 30px;
+      text-decoration: none;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    }
   </style>
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Organization",
-    "name":"Rumah Dakwah Husen NR",
-    "url":"https://husennr.github.io/Komdashik/",
-    "email":"astagaliattuh@gmail.com",
-    "logo":"https://husennr.github.io/Komdashik/favicon.ico"
-  }
-  </script>
 </head>
 <body>
-  <div class="container">
-    <div class="nav">
-      <div class="brand">Rumah Dakwah Husen NR</div>
-      <div class="navlinks">
-        <a href="index.html">Beranda</a>
-        <a href="kajian.html">Kajian</a>
-        <a href="artikel.html">Artikel</a>
-        <a href="program.html">Program</a>
-        <a href="profil.html">Profil</a>
-        <a href="kontak.html">Kontak</a>
-      </div>
-    </div>
 
-    <main class="card">
-      <div class="center-text">
-        <h1 class="h1">Selamat datang di Rumah Dakwah</h1>
-        <p class="lead">Tempat berkumpul untuk mendalami agama, kajian mingguan, dan inspirasi harian.</p>
-        <p><a href="kajian.html">Lihat jadwal kajian terbaru →</a></p>
-      </div>
-      <div class="footer">© Rumah Dakwah Husen NR — Semua hak dilindungi</div>
-    </main>
-  </div>
+  <header>
+    <img src="avatar.png" alt="Avatar Ustadz" width="100" height="100" style="border-radius:50%;border:3px solid white;">
+    <h1>Rumah Dakwah Husen NR</h1>
+    <p>Bersama kajian & inspirasi Islam harian</p>
+  </header>
 
-  <a class="whatsapp" href="https://wa.me/6285179828031" target="_blank" rel="noopener">Chat WA</a>
+  <nav>
+    <a href="index.html">Beranda</a>
+    <a href="profil.html">Profil</a>
+    <a href="kajian.html">Kajian</a>
+    <a href="artikel.html">Artikel</a>
+    <a href="program.html">Program</a>
+    <a href="tafsir.html">Tafsir</a>
+    <a href="doa.html">Doa</a>
+    <a href="galeri.html">Galeri</a>
+    <a href="resources.html">Resources</a>
+    <a href="kontak.html">Kontak</a>
+  </nav>
+
+  <main>
+    <section style="max-width:700px;margin:auto;padding:20px;">
+      <h2>Selamat Datang di Rumah Dakwah</h2>
+      <p>Media dakwah digital yang menyajikan kajian Islam, inspirasi harian, doa, dan tafsir untuk memperdalam ilmu agama dan menumbuhkan semangat ukhuwah Islamiyah.</p>
+      <p>“Sampaikan dariku walau satu ayat.” (HR. Bukhari)</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Rumah Dakwah Husen NR — Semua hak cipta dilindungi.</p>
+  </footer>
+
+  <a href="https://wa.me/6285179828031" class="whatsapp-float">💬</a>
+
 </body>
 </html>
