--- a/kajian.html
+++ b/kajian.html
@@ -1,75 +1,122 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Kajian & Ceramah — Rumah Dakwah Husen NR</title>
-  <link rel="icon" href="favicon.ico">
-  <meta name="description" content="Halaman resmi jadwal kajian dan rekaman ceramah. Tersedia materi kajian tematik untuk pendalaman tafsir, akhlak, dan keluarga.">
-  <meta name="keywords" content="jadwal kajian, rekaman ceramah, kajian online, tafsir">
-  <meta property="og:title" content="Kajian & Ceramah — Rumah Dakwah Husen NR">
-  <meta property="og:description" content="Jadwal kajian mingguan dan materi rekaman untuk pembelajaran berkelanjutan.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kajian Islam | Rumah Dakwah</title>
+  <meta name="description" content="Jadwal dan tema kajian Islam terbaru dari Rumah Dakwah. Temukan ilmu, hikmah, dan inspirasi keislaman setiap pekan.">
+  <meta name="keywords" content="kajian Islam, jadwal kajian, dakwah online, ilmu agama, ceramah islami">
+  <meta property="og:title" content="Kajian Islam Rumah Dakwah">
+  <meta property="og:description" content="Temukan jadwal dan tema kajian Islam terbaru dari Rumah Dakwah.">
   <meta property="og:image" content="og-image.png">
-  <meta property="og:url" content="./kajian.html">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:url" content="https://husennr.github.io/Komdashik/kajian.html">
+  <meta property="og:type" content="article">
+  <link rel="icon" href="favicon.ico">
   <style>
-    :root{--bg:#f7fdfc;--card:#fff;--accent:#0f766e;--muted:#6b7280}
-    *{box-sizing:border-box}body{margin:0;font-family:Inter,ui-sans-serif,system-ui,Arial,Helvetica,sans-serif;background:var(--bg);color:#0f172a}
-    .container{min-height:100vh;display:flex;flex-direction:column;align-items:center;padding:40px 16px}
-    .nav{width:100%;max-width:900px;display:flex;justify-content:space-between;align-items:center;margin-bottom:24px}
-    .brand{font-weight:700;color:var(--accent);font-size:20px}
-    .navlinks a{margin-left:14px;text-decoration:none;color:var(--muted);font-weight:600}
-    .card{width:100%;max-width:900px;background:var(--card);padding:44px;border-radius:12px;box-shadow:0 6px 24px rgba(10,10,10,0.06);text-align:left}
-    .h1{font-size:28px;margin:0 0 8px}
-    .lead{color:var(--muted);margin:0 0 18px}
-    .footer{margin-top:18px;color:var(--muted);font-size:14px;text-align:center}
-    .whatsapp{position:fixed;right:18px;bottom:18px;background:var(--accent);color:white;border-radius:999px;padding:12px 16px;text-decoration:none;font-weight:700;box-shadow:0 6px 18px rgba(15,118,110,0.25)}
-    .simple-list{text-align:left;margin-top:12px}
-    @media(max-width:520px){.card{padding:28px} .h1{font-size:22px}}
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(180deg, #198754, #0f5132);
+      color: white;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      padding: 60px 20px 20px;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 8px;
+      font-weight: 600;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+    .kajian-card {
+      background: rgba(255,255,255,0.1);
+      border-radius: 15px;
+      padding: 20px;
+      margin-bottom: 20px;
+      transition: transform 0.2s;
+    }
+    .kajian-card:hover {
+      transform: scale(1.02);
+    }
+    h1, h2 {
+      margin-bottom: 10px;
+    }
+    p {
+      opacity: 0.9;
+      line-height: 1.6;
+    }
+    .tanggal {
+      color: #d1e7dd;
+      font-weight: bold;
+      margin-top: 5px;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      background: rgba(255,255,255,0.1);
+      font-size: 0.9em;
+    }
   </style>
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Article",
-    "mainEntityOfPage": {"@type":"WebPage","@id":"https://husennr.github.io/Komdashik/kajian.html"},
-    "headline":"Kajian & Ceramah",
-    "description":"Jadwal kajian mingguan dan materi rekaman untuk pembelajaran berkelanjutan."
-  }
-  </script>
 </head>
 <body>
-  <div class="container">
-    <div class="nav">
-      <div class="brand">Rumah Dakwah Husen NR</div>
-      <div class="navlinks">
-        <a href="index.html">Beranda</a>
-        <a href="kajian.html">Kajian</a>
-        <a href="artikel.html">Artikel</a>
-        <a href="program.html">Program</a>
-        <a href="profil.html">Profil</a>
-        <a href="kontak.html">Kontak</a>
-      </div>
-    </div>
 
-    <main class="card">
-      <h1 class="h1">Kajian & Ceramah</h1>
-      <p class="lead">Jadwal kajian mingguan dan materi rekaman untuk pembelajaran berkelanjutan.</p>
-      <div class="simple-list">
-        <h3>Jadwal Mingguan</h3>
-        <ul>
-          <li>Selasa: Kajian Tafsir (20:00)</li>
-          <li>Jumat: Kajian Akhlak (19:30)</li>
-          <li>Minggu: Kajian Keluarga (17:00)</li>
-        </ul>
-      </div>
-      <div style="margin-top:18px;">
-        <h3>Rekaman & Materi</h3>
-        <p>Link rekaman dan materi akan diunggah di halaman ini secara berkala.</p>
-      </div>
-      <div class="footer">© Rumah Dakwah Husen NR — Semua hak dilindungi</div>
-    </main>
-  </div>
+  <header>
+    <h1>Kajian Islam</h1>
+    <p>Ilmu yang menuntun langkah menuju cahaya</p>
+  </header>
 
-  <a class="whatsapp" href="https://wa.me/6285179828031" target="_blank" rel="noopener">Chat WA</a>
+  <nav>
+    <a href="index.html">Beranda</a>
+    <a href="profil.html">Profil</a>
+    <a href="kajian.html">Kajian</a>
+    <a href="artikel.html">Artikel</a>
+    <a href="program.html">Program</a>
+    <a href="tafsir.html">Tafsir</a>
+    <a href="doa.html">Doa</a>
+    <a href="galeri.html">Galeri</a>
+    <a href="resources.html">Resources</a>
+    <a href="kontak.html">Kontak</a>
+  </nav>
+
+  <main>
+    <section class="kajian-card">
+      <h2>Kajian Tafsir Al-Qur’an: Makna dan Hikmah</h2>
+      <p>Membahas makna ayat-ayat Al-Qur’an dengan pendekatan tafsir tematik agar mudah dipahami dan diterapkan dalam kehidupan sehari-hari.</p>
+      <p class="tanggal">Setiap Senin & Kamis | 19.30 WIB (Online via Zoom)</p>
+    </section>
+
+    <section class="kajian-card">
+      <h2>Kajian Hadis: Akhlak Rasulullah ﷺ</h2>
+      <p>Mengupas hadis-hadis pilihan seputar akhlak mulia Rasulullah ﷺ sebagai teladan umat Islam dalam bersikap dan berinteraksi.</p>
+      <p class="tanggal">Setiap Sabtu | 20.00 WIB (Masjid Al-Falah & Live YouTube)</p>
+    </section>
+
+    <section class="kajian-card">
+      <h2>Kajian Tematik: Pemuda dan Dakwah Digital</h2>
+      <p>Mendorong semangat dakwah di kalangan muda dengan memanfaatkan media sosial dan teknologi digital secara bijak dan produktif.</p>
+      <p class="tanggal">Setiap Minggu | 09.00 WIB (Offline & Online)</p>
+    </section>
+
+    <section class="kajian-card">
+      <h2>Kajian Fiqih Praktis Sehari-hari</h2>
+      <p>Membahas hukum-hukum dasar fiqih yang sering ditemui dalam kehidupan modern, seperti muamalah, ibadah, dan sosial.</p>
+      <p class="tanggal">Setiap Rabu | 19.00 WIB</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Rumah Dakwah — Kajian dan ilmu untuk umat.</p>
+  </footer>
+
 </body>
 </html>
