Revise artikel.html with new layout and content
Updated the HTML structure and content for the article page, changing the title, meta tags, and layout to reflect a new theme and additional articles.

--- a/artikel.html
+++ b/artikel.html
@@ -1,49 +1,125 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Artikel & Refleksi — Rumah Dakwah Husen NR</title>
-  <link rel="icon" href="favicon.ico">
-  <meta name="description" content="Kumpulan artikel, renungan, dan panduan singkat tentang aqidah, ibadah, dan akhlak keluarga. Cocok untuk bacaan harian dan diskusi halaqah.">
-  <meta name="keywords" content="artikel islam, renungan, fiqh, akhlak">
-  <meta property="og:title" content="Artikel & Refleksi — Rumah Dakwah Husen NR">
-  <meta property="og:description" content="Tulisan singkat dan renungan harian untuk memperkuat iman dan praktik.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Artikel & Inspirasi | Rumah Dakwah</title>
+  <meta name="description" content="Kumpulan artikel dakwah, inspirasi Islam, dan motivasi hidup Islami dari Rumah Dakwah.">
+  <meta name="keywords" content="artikel dakwah, inspirasi Islam, motivasi hidup, nasihat Islami, rumah dakwah">
+  <meta property="og:title" content="Artikel & Inspirasi Rumah Dakwah">
+  <meta property="og:description" content="Baca artikel dan inspirasi Islam untuk menambah iman dan ilmu.">
   <meta property="og:image" content="og-image.png">
-  <meta property="og:url" content="./artikel.html">
-  <meta name="twitter:card" content="summary_large_image">
-  <style>/* same CSS as other pages */:root{--bg:#f7fdfc;--card:#fff;--accent:#0f766e;--muted:#6b7280}*{box-sizing:border-box}body{margin:0;font-family:Inter,ui-sans-serif,system-ui,Arial,Helvetica,sans-serif;background:var(--bg);color:#0f172a}.container{min-height:100vh;display:flex;flex-direction:column;align-items:center;padding:40px 16px}.nav{width:100%;max-width:900px;display:flex;justify-content:space-between;align-items:center;margin-bottom:24px}.brand{font-weight:700;color:var(--accent);font-size:20px}.navlinks a{margin-left:14px;text-decoration:none;color:var(--muted);font-weight:600}.card{width:100%;max-width:900px;background:var(--card);padding:44px;border-radius:12px;box-shadow:0 6px 24px rgba(10,10,10,0.06);text-align:left}.h1{font-size:28px;margin:0 0 8px}.lead{color:var(--muted);margin:0 0 18px}.footer{margin-top:18px;color:var(--muted);font-size:14px;text-align:center}.whatsapp{position:fixed;right:18px;bottom:18px;background:var(--accent);color:white;border-radius:999px;padding:12px 16px;text-decoration:none;font-weight:700;box-shadow:0 6px 18px rgba(15,118,110,0.25)}.simple-list{text-align:left;margin-top:12px}@media(max-width:520px){.card{padding:28px} .h1{font-size:22px}}</style>
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"CollectionPage","name":"Artikel & Refleksi","description":"Kumpulan artikel dan renungan harian untuk memperkuat iman dan praktik."}
-  </script>
+  <meta property="og:url" content="https://husennr.github.io/Komdashik/artikel.html">
+  <meta property="og:type" content="article">
+  <link rel="icon" href="favicon.ico">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(180deg, #0f5132, #198754);
+      color: white;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      padding: 60px 20px 20px;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 8px;
+      font-weight: 600;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+    .artikel-card {
+      background: rgba(255,255,255,0.1);
+      border-radius: 15px;
+      padding: 20px;
+      margin-bottom: 25px;
+      text-align: left;
+      transition: transform 0.2s;
+    }
+    .artikel-card:hover {
+      transform: scale(1.02);
+    }
+    .artikel-card h2 {
+      color: #fff;
+      margin-bottom: 10px;
+    }
+    .artikel-card p {
+      line-height: 1.7;
+      opacity: 0.95;
+    }
+    .tanggal {
+      color: #d1e7dd;
+      font-weight: bold;
+      font-size: 0.9em;
+      margin-top: 8px;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      background: rgba(255,255,255,0.1);
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <div class="nav">
-      <div class="brand">Rumah Dakwah Husen NR</div>
-      <div class="navlinks">
-        <a href="index.html">Beranda</a>
-        <a href="kajian.html">Kajian</a>
-        <a href="artikel.html">Artikel</a>
-        <a href="program.html">Program</a>
-        <a href="profil.html">Profil</a>
-        <a href="kontak.html">Kontak</a>
-      </div>
-    </div>
 
-    <main class="card">
-      <h1 class="h1">Artikel & Refleksi</h1>
-      <p class="lead">Tulisan singkat dan renungan harian untuk memperkuat iman dan praktik.</p>
-      <div class="simple-list">
-        <article>
-          <h4>Belajar Sabar dalam Kehidupan</h4>
-          <p>Ringkasan praktik sabar dalam situasi sehari-hari...</p>
-        </article>
-      </div>
-      <div class="footer">© Rumah Dakwah Husen NR — Semua hak dilindungi</div>
-    </main>
-  </div>
+  <header>
+    <h1>Artikel & Inspirasi</h1>
+    <p>Menebar ilmu, menyalakan hati</p>
+  </header>
 
-  <a class="whatsapp" href="https://wa.me/6285179828031" target="_blank" rel="noopener">Chat WA</a>
+  <nav>
+    <a href="index.html">Beranda</a>
+    <a href="profil.html">Profil</a>
+    <a href="kajian.html">Kajian</a>
+    <a href="artikel.html">Artikel</a>
+    <a href="program.html">Program</a>
+    <a href="tafsir.html">Tafsir</a>
+    <a href="doa.html">Doa</a>
+    <a href="galeri.html">Galeri</a>
+    <a href="resources.html">Resources</a>
+    <a href="kontak.html">Kontak</a>
+  </nav>
+
+  <main>
+    <article class="artikel-card">
+      <h2>Menjaga Hati di Tengah Kesibukan Dunia</h2>
+      <p>Kesibukan dunia sering kali membuat kita lupa akan pentingnya menjaga hati. Dalam Islam, kebersihan hati menjadi cerminan keimanan seseorang. Dzikir, doa, dan sedekah menjadi jalan menjaga hati agar tetap lembut.</p>
+      <p class="tanggal">Dipublikasikan: 12 Oktober 2025</p>
+    </article>
+
+    <article class="artikel-card">
+      <h2>Makna Sabar dalam Ujian</h2>
+      <p>Sabar bukan berarti pasrah tanpa usaha, melainkan keteguhan hati dalam menghadapi ujian dengan keyakinan bahwa pertolongan Allah pasti datang pada waktunya.</p>
+      <p class="tanggal">Dipublikasikan: 18 Oktober 2025</p>
+    </article>
+
+    <article class="artikel-card">
+      <h2>Dakwah dengan Akhlak</h2>
+      <p>Dakwah tidak selalu harus dengan kata-kata. Sikap jujur, rendah hati, dan santun adalah dakwah yang paling mudah menyentuh hati orang lain. Rasulullah ﷺ adalah teladan terbaik dalam hal ini.</p>
+      <p class="tanggal">Dipublikasikan: 22 Oktober 2025</p>
+    </article>
+
+    <article class="artikel-card">
+      <h2>Menjadi Cahaya di Zaman Gelap</h2>
+      <p>Di tengah derasnya arus informasi dan fitnah digital, seorang muslim hendaknya menjadi cahaya yang menuntun pada kebaikan, bukan justru ikut menambah gelapnya keadaan.</p>
+      <p class="tanggal">Dipublikasikan: 25 Oktober 2025</p>
+    </article>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Rumah Dakwah — Artikel & inspirasi Islam harian.</p>
+  </footer>
+
 </body>
 </html>
