Revise HTML structure and content for program page
Added viewport meta tag and updated program details.

--- a/program.html
+++ b/program.html
@@ -1,1 +1,131 @@
-<!DOCTYPE html><html lang='id'><head><meta charset='UTF-8'><title>Program Dakwah | Rumah Dakwah Husen NR</title><meta name='description' content='Program dakwah digital untuk memperluas syiar Islam.'><meta name='keywords' content='program dakwah, kegiatan Islam, edukasi online'><meta property='og:image' content='https://husennr.github.io/Komdashik/assets/og-image.png'><link rel='stylesheet' href='assets/style.css'></head><body><h1>Program Dakwah</h1><p>Berbagai kegiatan dan pelatihan dakwah daring untuk umat.</p><a href='https://wa.me/6285179828031' class='whatsapp-float'>Chat Dakwah</a></body></html>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Program Dakwah | Rumah Dakwah</title>
+  <meta name="description" content="Program dakwah Rumah Dakwah: kegiatan sosial, pendidikan Islam, dan pembinaan generasi muda.">
+  <meta name="keywords" content="program dakwah, kegiatan Islam, pembinaan, kajian, sosial, pendidikan">
+  <meta property="og:title" content="Program Dakwah Rumah Dakwah">
+  <meta property="og:description" content="Ikuti kegiatan dan program dakwah dari Rumah Dakwah untuk memperkuat iman dan ukhuwah.">
+  <meta property="og:image" content="og-image.png">
+  <meta property="og:url" content="https://husennr.github.io/Komdashik/program.html">
+  <meta property="og:type" content="article">
+  <link rel="icon" href="favicon.ico">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(180deg, #198754, #0f5132);
+      color: white;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      padding: 60px 20px 20px;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 8px;
+      font-weight: 600;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+    .program-card {
+      background: rgba(255,255,255,0.1);
+      border-radius: 15px;
+      padding: 20px;
+      margin-bottom: 25px;
+      text-align: left;
+      transition: transform 0.2s;
+    }
+    .program-card:hover {
+      transform: scale(1.02);
+    }
+    .program-card h2 {
+      color: #fff;
+      margin-bottom: 10px;
+    }
+    .program-card p {
+      line-height: 1.7;
+      opacity: 0.95;
+    }
+    .jadwal {
+      color: #d1e7dd;
+      font-weight: bold;
+      font-size: 0.9em;
+      margin-top: 8px;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      background: rgba(255,255,255,0.1);
+      font-size: 0.9em;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Program Dakwah</h1>
+    <p>Menebar manfaat, memperkuat ukhuwah</p>
+  </header>
+
+  <nav>
+    <a href="index.html">Beranda</a>
+    <a href="profil.html">Profil</a>
+    <a href="kajian.html">Kajian</a>
+    <a href="artikel.html">Artikel</a>
+    <a href="program.html">Program</a>
+    <a href="tafsir.html">Tafsir</a>
+    <a href="doa.html">Doa</a>
+    <a href="galeri.html">Galeri</a>
+    <a href="resources.html">Resources</a>
+    <a href="kontak.html">Kontak</a>
+  </nav>
+
+  <main>
+    <section class="program-card">
+      <h2>1. Program Sedekah Jumat</h2>
+      <p>Kegiatan berbagi makanan dan kebutuhan pokok kepada masyarakat sekitar setiap hari Jumat sebagai wujud kepedulian sosial umat Islam.</p>
+      <p class="jadwal">Setiap Jumat | 12.30 WIB | Masjid Al-Falah & Sekitarnya</p>
+    </section>
+
+    <section class="program-card">
+      <h2>2. Kajian Remaja Masjid</h2>
+      <p>Program pembinaan remaja dengan pendekatan dakwah kreatif dan diskusi terbuka untuk memperkuat keimanan generasi muda.</p>
+      <p class="jadwal">Setiap Sabtu | 16.00 WIB | Aula Rumah Dakwah</p>
+    </section>
+
+    <section class="program-card">
+      <h2>3. Dakwah Digital</h2>
+      <p>Pelatihan membuat konten dakwah, desain islami, dan video pendek inspiratif yang disebarkan melalui media sosial.</p>
+      <p class="jadwal">Setiap Minggu | 09.00 WIB | Studio Rumah Dakwah</p>
+    </section>
+
+    <section class="program-card">
+      <h2>4. Program Tahsin & Tahfidz</h2>
+      <p>Meningkatkan kemampuan membaca dan menghafal Al-Qur’an dengan bimbingan ustadz dan ustadzah berpengalaman.</p>
+      <p class="jadwal">Setiap Senin - Kamis | 18.30 WIB</p>
+    </section>
+
+    <section class="program-card">
+      <h2>5. Bakti Sosial & Tebar Kebaikan</h2>
+      <p>Kegiatan sosial untuk membantu masyarakat terdampak bencana, yatim, dan dhuafa melalui donasi dan aksi nyata.</p>
+      <p class="jadwal">Setiap bulan | Lokasi bervariasi</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Rumah Dakwah — Program untuk keberkahan dan kemanusiaan.</p>
+  </footer>
+
+</body>
+</html>
