--- a/doa.html
+++ b/doa.html
@@ -1,45 +1,130 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Doa Harian — Rumah Dakwah Husen NR</title>
-  <link rel="icon" href="favicon.ico">
-  <meta name="description" content="Kumpulan doa harian dan amalan singkat untuk keluarga, perjalanan, dan kegiatan sehari-hari. Disusun ringkas agar mudah diamalkan.">
-  <meta name="keywords" content="doa harian, amalan, zikir">
-  <meta property="og:title" content="Doa Harian — Rumah Dakwah Husen NR">
-  <meta property="og:description" content="Doa dan zikir ringkas untuk menemani aktivitas sehari-hari.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Doa Harian | Rumah Dakwah</title>
+  <meta name="description" content="Kumpulan doa harian dan dzikir pendek yang mudah diamalkan setiap hari.">
+  <meta name="keywords" content="doa harian, dzikir, doa pendek, rumah dakwah, amalan sehari-hari">
+  <meta property="og:title" content="Doa Harian Rumah Dakwah">
+  <meta property="og:description" content="Kumpulan doa harian dan dzikir untuk ketenangan jiwa.">
   <meta property="og:image" content="og-image.png">
-  <meta property="og:url" content="./doa.html">
-  <meta name="twitter:card" content="summary_large_image">
-  <style>/* css sama */:root{--bg:#f7fdfc;--card:#fff;--accent:#0f766e;--muted:#6b7280}*{box-sizing:border-box}body{margin:0;font-family:Inter,ui-sans-serif,system-ui,Arial,Helvetica,sans-serif;background:var(--bg);color:#0f172a}.container{min-height:100vh;display:flex;flex-direction:column;align-items:center;padding:40px 16px}.nav{width:100%;max-width:900px;display:flex;justify-content:space-between;align-items:center;margin-bottom:24px}.brand{font-weight:700;color:var(--accent);font-size:20px}.navlinks a{margin-left:14px;text-decoration:none;color:var(--muted);font-weight:600}.card{width:100%;max-width:900px;background:var(--card);padding:44px;border-radius:12px;box-shadow:0 6px 24px rgba(10,10,10,0.06);text-align:left}.h1{font-size:28px;margin:0 0 8px}.lead{color:var(--muted);margin:0 0 18px}.footer{margin-top:18px;color:var(--muted);font-size:14px;text-align:center}.whatsapp{position:fixed;right:18px;bottom:18px;background:var(--accent);color:white;border-radius:999px;padding:12px 16px;text-decoration:none;font-weight:700;box-shadow:0 6px 18px rgba(15,118,110,0.25)}.simple-list{text-align:left;margin-top:12px}@media(max-width:520px){.card{padding:28px} .h1{font-size:22px}}</style>
+  <meta property="og:url" content="https://husennr.github.io/Komdashik/doa.html">
+  <meta property="og:type" content="article">
+  <link rel="icon" href="favicon.ico">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(180deg, #198754, #14532d);
+      color: white;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      padding: 60px 20px 20px;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 8px;
+      font-weight: 600;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+    .doa-card {
+      background: rgba(255,255,255,0.1);
+      border-radius: 15px;
+      padding: 20px;
+      margin-bottom: 25px;
+      text-align: left;
+      transition: transform 0.2s;
+    }
+    .doa-card:hover {
+      transform: scale(1.02);
+    }
+    .doa-card h2 {
+      color: #fff;
+      margin-bottom: 10px;
+    }
+    .doa-card p {
+      line-height: 1.7;
+      opacity: 0.95;
+    }
+    .arabic {
+      font-size: 1.2em;
+      color: #d1e7dd;
+      font-style: italic;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      background: rgba(255,255,255,0.1);
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <div class="nav">
-      <div class="brand">Rumah Dakwah Husen NR</div>
-      <div class="navlinks">
-        <a href="index.html">Beranda</a>
-        <a href="kajian.html">Kajian</a>
-        <a href="artikel.html">Artikel</a>
-        <a href="program.html">Program</a>
-        <a href="profil.html">Profil</a>
-        <a href="kontak.html">Kontak</a>
-      </div>
-    </div>
 
-    <main class="card">
-      <h1 class="h1">Doa Harian</h1>
-      <p class="lead">Doa dan zikir ringkas untuk menemani aktivitas sehari-hari.</p>
-      <ol class="simple-list">
-        <li>Doa sebelum beraktivitas</li>
-        <li>Doa memohon keselamatan</li>
-        <li>Doa untuk keluarga</li>
-      </ol>
-      <div class="footer">© Rumah Dakwah Husen NR — Semua hak dilindungi</div>
-    </main>
-  </div>
+  <header>
+    <h1>Doa Harian</h1>
+    <p>Kumpulan doa dan dzikir untuk keseharian</p>
+  </header>
 
-  <a class="whatsapp" href="https://wa.me/6285179828031" target="_blank" rel="noopener">Chat WA</a>
+  <nav>
+    <a href="index.html">Beranda</a>
+    <a href="profil.html">Profil</a>
+    <a href="kajian.html">Kajian</a>
+    <a href="artikel.html">Artikel</a>
+    <a href="program.html">Program</a>
+    <a href="tafsir.html">Tafsir</a>
+    <a href="doa.html">Doa</a>
+    <a href="galeri.html">Galeri</a>
+    <a href="resources.html">Resources</a>
+    <a href="kontak.html">Kontak</a>
+  </nav>
+
+  <main>
+    <article class="doa-card">
+      <h2>1. Doa Bangun Tidur</h2>
+      <p class="arabic">اَلْـحَمْدُ لِلّٰهِ الَّذِيْ أَحْيَانَا بَعْدَ مَا أَمَاتَنَا وَإِلَيْهِ النُّشُوْرُ</p>
+      <p>“Segala puji bagi Allah yang telah menghidupkan kami setelah mematikan kami (tidur), dan hanya kepada-Nya kami kembali.”</p>
+    </article>
+
+    <article class="doa-card">
+      <h2>2. Doa Sebelum Makan</h2>
+      <p class="arabic">بِسْمِ اللّٰهِ</p>
+      <p>“Dengan menyebut nama Allah.”</p>
+    </article>
+
+    <article class="doa-card">
+      <h2>3. Doa Sesudah Makan</h2>
+      <p class="arabic">اَلْـحَمْدُ لِلّٰهِ الَّذِيْ أَطْعَمَنَا وَسَقَانَا وَجَعَلَنَا مِنَ الْمُسْلِمِيْنَ</p>
+      <p>“Segala puji bagi Allah yang telah memberi kami makan dan minum serta menjadikan kami sebagai orang Islam.”</p>
+    </article>
+
+    <article class="doa-card">
+      <h2>4. Doa Masuk Masjid</h2>
+      <p class="arabic">اَللّٰهُمَّ افْتَحْ لِيْ أَبْوَابَ رَحْمَتِكَ</p>
+      <p>“Ya Allah, bukalah untukku pintu-pintu rahmat-Mu.”</p>
+    </article>
+
+    <article class="doa-card">
+      <h2>5. Doa Keluar Rumah</h2>
+      <p class="arabic">بِسْمِ اللّٰهِ تَوَكَّلْتُ عَلَى اللّٰهِ، لَا حَوْلَ وَلَا قُوَّةَ إِلَّا بِاللّٰهِ</p>
+      <p>“Dengan nama Allah, aku bertawakal kepada Allah. Tiada daya dan kekuatan kecuali dengan pertolongan Allah.”</p>
+    </article>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Rumah Dakwah — Doa adalah kekuatan hati setiap mukmin.</p>
+  </footer>
+
 </body>
 </html>
