Revamp kontak.html with new layout and form
Updated the contact page with a new layout, added a form for user inquiries, and improved metadata for SEO.

--- a/kontak.html
+++ b/kontak.html
@@ -1,1 +1,132 @@
-<!DOCTYPE html><html lang='id'><head><meta charset='UTF-8'><title>Kontak Kami | Rumah Dakwah Husen NR</title><meta name='description' content='Hubungi Rumah Dakwah Husen NR untuk kolaborasi, pertanyaan, dan bimbingan spiritual.'><meta name='keywords' content='kontak ustadz, konsultasi Islam, tanya ustadz'><meta property='og:image' content='https://husennr.github.io/Komdashik/assets/og-image.png'><link rel='stylesheet' href='assets/style.css'></head><body><h1>Kontak Kami</h1><p>Email: astagaliattuh@gmail.com | Telp: 085179828031</p><a href='https://wa.me/6285179828031' class='whatsapp-float'>Chat Dakwah</a></body></html>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kontak | Rumah Dakwah</title>
+  <meta name="description" content="Hubungi Rumah Dakwah untuk pertanyaan, kerja sama, atau konsultasi kegiatan dakwah.">
+  <meta name="keywords" content="kontak dakwah, form dakwah, rumah dakwah, konsultasi islam">
+  <meta property="og:title" content="Kontak Rumah Dakwah">
+  <meta property="og:description" content="Hubungi kami untuk kerja sama atau konsultasi dakwah.">
+  <meta property="og:image" content="og-image.png">
+  <meta property="og:url" content="https://husennr.github.io/Komdashik/kontak.html">
+  <meta property="og:type" content="website">
+  <link rel="icon" href="favicon.ico">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(180deg, #198754, #0f5132);
+      color: white;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      padding: 60px 20px 20px;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 8px;
+      font-weight: 600;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 700px;
+      margin: 40px auto;
+      padding: 20px;
+      text-align: left;
+    }
+    form {
+      background: rgba(255,255,255,0.1);
+      border-radius: 15px;
+      padding: 25px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+    label {
+      font-weight: 600;
+      color: #fff;
+    }
+    input, textarea {
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 1em;
+      outline: none;
+    }
+    input[type="submit"] {
+      background-color: #d1e7dd;
+      color: #14532d;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+    input[type="submit"]:hover {
+      background-color: #fff;
+      color: #198754;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      background: rgba(255,255,255,0.1);
+      font-size: 0.9em;
+      text-align: center;
+    }
+    .info {
+      margin-top: 20px;
+      text-align: center;
+      color: #d1e7dd;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Kontak Rumah Dakwah</h1>
+    <p>Hubungi kami untuk kerja sama atau konsultasi dakwah</p>
+  </header>
+
+  <nav>
+    <a href="index.html">Beranda</a>
+    <a href="profil.html">Profil</a>
+    <a href="kajian.html">Kajian</a>
+    <a href="artikel.html">Artikel</a>
+    <a href="program.html">Program</a>
+    <a href="tafsir.html">Tafsir</a>
+    <a href="doa.html">Doa</a>
+    <a href="galeri.html">Galeri</a>
+    <a href="resources.html">Resources</a>
+    <a href="kontak.html">Kontak</a>
+  </nav>
+
+  <main>
+    <form action="https://formspree.io/f/movajoyp" method="POST">
+      <label for="name">Nama Lengkap</label>
+      <input type="text" id="name" name="nama" placeholder="Masukkan nama Anda" required>
+
+      <label for="email">Alamat Email</label>
+      <input type="email" id="email" name="_replyto" placeholder="Masukkan email Anda" required>
+
+      <label for="pesan">Pesan</label>
+      <textarea id="pesan" name="pesan" rows="5" placeholder="Tulis pesan atau pertanyaan Anda..." required></textarea>
+
+      <input type="submit" value="Kirim Pesan">
+    </form>
+
+    <div class="info">
+      <p>📞 <strong>0851-7982-8031</strong></p>
+      <p>✉️ <a href="mailto:astagaliattuh@gmail.com" style="color:#d1e7dd;">astagaliattuh@gmail.com</a></p>
+      <p>🏠 Rumah Dakwah Online — Menebar Cahaya Ilmu dan Akhlak</p>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Rumah Dakwah — Hubungan yang baik dimulai dari silaturahmi.</p>
+  </footer>
+
+</body>
+</html>
