--- a/resources.html
+++ b/resources.html
@@ -97,25 +97,31 @@
 
   <main>
     <section class="resource-card">
-      <h2>1. E-Book: Dasar-Dasar Dakwah</h2>
+      <h2>1. Koleksi E-Book Khusus</h2>
+      <p>Akses dan unduh berbagai E-book dakwah digital yang telah kami kumpulkan, termasuk E-book karya saya sendiri.</p>
+      <a href="https://drive.google.com/drive/folders/1Hg6BJdXMVdE_D6ivPw9QLWgypGXT93cI" target="_blank">📚 Akses Folder Google Drive Anda</a>
+    </section>
+    
+    <section class="resource-card">
+      <h2>2. E-Book: Dasar-Dasar Dakwah</h2>
       <p>Panduan singkat memahami prinsip dakwah Rasulullah ﷺ dan aplikasinya di era digital.</p>
       <a href="https://example.com/ebook-dasar-dakwah.pdf" target="_blank">📘 Unduh PDF</a>
     </section>
 
     <section class="resource-card">
-      <h2>2. Kumpulan Hadis Tematik</h2>
+      <h2>3. Kumpulan Hadis Tematik</h2>
       <p>Referensi hadis shahih yang disusun berdasarkan tema seperti akhlak, ibadah, dan muamalah.</p>
       <a href="https://example.com/hadis-tematik.pdf" target="_blank">📗 Unduh PDF</a>
     </section>
 
     <section class="resource-card">
-      <h2>3. Video Dakwah Pilihan</h2>
+      <h2>4. Video Dakwah Pilihan</h2>
       <p>Tonton video dakwah inspiratif dari berbagai ustadz terpercaya.</p>
       <a href="https://youtube.com/@rumahdakwah" target="_blank">▶️ Lihat di YouTube</a>
     </section>
 
     <section class="resource-card">
-      <h2>4. Website Islami Rekomendasi</h2>
+      <h2>5. Website Islami Rekomendasi</h2>
       <p>Beberapa situs yang bisa menjadi rujukan dalam memperdalam ilmu agama Islam.</p>
       <ul style="list-style:none; padding-left:0;">
         <li><a href="https://rumaysho.com" target="_blank">🌐 Rumaysho.com</a></li>
