Replace avatar image with RD Rumah Dakwah logo

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
 
   <header>
-    <img src="avatar.png" alt="Avatar Ustadz" width="100" height="100" style="border-radius:50%;border:3px solid white;">
+    <img src="img/rd-logo.png" alt="Logo RD Rumah Dakwah" width="100" height="100" style="border-radius:12px;border:3px solid white;object-fit:contain;">
     <h1>Rumah Dakwah Husen NR</h1>
     <p>Bersama kajian & inspirasi Islam harian</p>
   </header>
